--- a/main.html
+++ b/main.html
@@ -7,6 +7,62 @@
 </head>
 
 <body>
+	<h1>HTML Assignment #3</h1>
+
+    <!-- Table 1 -->
+    <table id="table-1" class="middle">
+        <tr>
+            <td id="t11">left</td>
+            <td id="t12">middle</td>
+            <td id="t13" class="right">right</td>
+        </tr>
+        <tr class="center">
+            <td>left</td>
+            <td>middle</td>
+            <td class="right">right</td>
+        </tr>
+        <tr>
+            <td>left</td>
+            <td>middle</td>
+            <td class="right">right</td>
+        </tr>
+    </table>
+
+    <!-- Table 2 -->
+    <table id="table-2" class="middle">
+        <tr>
+            <td id="t21" colspan="6">Single Cell</td>
+        </tr>
+        <tr>
+            <td>Cell 1</td> <td>Cell 2</td> <td>Cell 3</td> <td>Cell 4</td> <td>Cell 5</td> <td>Cell 6</td>
+        </tr>
+        <tr>
+            <td>Cell 7</td> <td>Cell 8</td> <td>Cell 9</td> <td>Cell 10</td> <td>Cell 11</td> <td>Cell 12</td>
+        </tr>
+        <tr>
+            <td>Cell 13</td> <td>Cell 14</td> <td>Cell 15</td> <td>Cell 16</td> <td>Cell 17</td> <td>Cell 18</td>
+        </tr>
+        <tr>
+            <td>Cell 19</td> <td>Cell 20</td> <td>Cell 21</td> <td>Cell 22</td> <td>Cell 23</td> <td>Cell 24</td>
+        </tr>
+        <tr>
+            <td>Cell 25</td> <td>Cell 26</td> <td>Cell 27</td> <td>Cell 28</td> <td>Cell 29</td> <td>Cell 30</td>
+        </tr>
+    </table>
+
+	<table id="table-3" class=middle>
+		<tr class="green">
+			<td colspan="3">Green</td>
+		</tr>
+		<tr>
+			<td>1</td>
+			<td id="t-image"><img src="https://www2.d125.org/applied_arts/teched/courses/WEB/portfolios/2013_FallP3/Luthra%20Portfolio/images-1.jpeg"></td>
+			<td>3</td>
+		</tr>
+		<tr class="blue">
+			<td colspan="3">blue</td>
+		</tr>
+	</table>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
