--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
     <table id="table-1" class="middle">
         <tr>
             <td id="t11">left</td>
-            <td id="t12">middle</td>
+            <td id="t12" class="center">middle</td>
             <td id="t13" class="right">right</td>
         </tr>
         <tr class="center">
